# hw-nanoparsec

./: .ghc.environment.x86_64-darwin-8.6.5  .ghc.environment.x86_64-darwin-8.8.3  .travis.yml  README.md  circle.yml  hw-string-parse.cabal  package.yaml
.circleci/: config.yml
.github/workflows/: haskell.yml
src/HaskellWorks/Data/String/: Parse.hs
